[project]
name = "llmstxt"
version = "0.1.0"
description = "Compress code files into LLM-friendly format"
authors = [{ name = "Aunova", email = "chris@aunova.net" }]
dependencies = ["gitignore_parser>=0.1.11", "astroid>=3.0.1"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
llmstxt = "llmstxt.__main__:generate_llms_txt"

[project.optional-dependencies]
dev = ["mypy>=1.7.0", "ruff>=0.1.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["llmstxt"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
